# gradient-playground

./: .gitignore  README.md  pyproject.toml
01-lin-reg-api/: pyproject.toml
01-lin-reg-api/linreg/: api.py  model.py
02-log-reg-api/: pyproject.toml
02-log-reg-api/logreg/: api.py  model.py
03-softmax-reg-api/: README.md  mnist_test.py  pyproject.toml  test_requests.http
03-softmax-reg-api/app/: api.py  model.py
04-gda-banknote/: pyproject.toml
04-gda-banknote/app/: api.py  gda.py  main.py
04-gda-iris-test/: pyproject.toml
04-gda-iris-test/app/: gda.py
05-svm-experiments/: model.py
learning/intro_nn_karpathy/micrograd/: micrograd.ipynb
numerical_experiments/: lip.ipynb
