[project]
name = "1-lin-reg-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Srinivas Harish", email = "srinivasharishx@gmail.com"}
]


requires-python = ">=3.12"
dependencies = [
    "torch>=2.7.0,<3.0.0",
    "fastapi>=0.115.12,<0.116.0",
    "uvicorn>=0.34.3,<0.35.0",
    "numpy>=2.2.6,<3.0.0"
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["linreg"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "linreg" }]
