[project]
name = "gda-iris-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Srinivas Harish",email = "srinivas7992@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn (>=1.7.0,<2.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pandas (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
